# poke-rs-api

./: .dockerignore  .gitignore  Dockerfile-alpine  Dockerfile-rs  Dockerfile-test  LICENSE  README.md  build.py  docker-build.sh  map2id.py  poke2id.py  poke2id.toml  pokeapi-cacher.py  test.sh
assets/: README.md
mappings/: berry2id.toml  move2id.toml  pokemon2id.toml
poke-rs-api/: .gitignore  Cargo.toml  LICENSE  README.md  auth-example.toml  cargo-features.txt  todo.md
poke-rs-api/examples/: compression-middleware.rs
poke-rs-api/src/: lib.rs  main.rs  poke2id.toml
poke-rs-api/src/api/: mod.rs  pokeapi.rs
poke-rs-api/src/pkmn/: mapper.rs  mod.rs
poke-rs-api/src/util/: mod.rs
poke-rs-api/tests/: test.rs
pokeapi-cache/move/: 1.json  10.json  101.json  105.json  106.json  109.json  110.json  111.json  113.json  114.json  115.json  116.json  118.json  122.json  123.json  129.json  139.json  14.json  141.json  147.json  150.json  154.json  156.json  157.json  16.json  163.json  164.json  168.json  17.json  170.json  172.json  173.json  175.json  179.json  180.json  182.json  184.json  188.json  189.json  19.json  (+277 more)
test/: tests.py
