[package]
name = "poke-rs-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version ="0.6.17", features=["headers"] }
axum-macros = "0.3.7"
bytes = "1.4.0"
clap = { version = "4.0", features = ["derive"] }
http = "0.2.9"
http-body = "0.4.5"
hyper = "0.14.26"
maybe-async = "0.2.7"
nanoid = "0.4.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = "1.0.160"
serde_derive = "1.0.160"
tokio = { version="1.28.0", features=["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
toml = "0.7.3"
tower = { version = "0.4.13", features = ["limit", "buffer", "timeout"] }
tower-http = { version="0.4.0", features = ["compression-full", "decompression-full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
